MSS-1496 fixed badge position on mobile screen

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -1113,6 +1113,9 @@
                 width: auto;
                 border: rem(1) solid #E0E0E0;
 
+                @include media-breakpoint-down(sm) {
+                    margin-left: rem(10);
+                }
             }
         }
     }
